# frontpage

./: Makefile  README.md  app.py  pyproject.toml
.github/workflows/: create_requirements.yml  python-app.yml
docs/: index.html
docs/static/: main.css
static/: main.css
templates/: home.html
